# yt-dlp-iceberg

./: .gitignore  README.md  pyproject.toml  sample_config.yaml
tests/: test_yt_dlp_iceberg.py
yt_dlp_iceberg/: config.py  main.py  preset.py  project.py
